--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -133,6 +133,7 @@
      <script src="{{STATIC_URL}}js/bootstrap-alert.js"></script>
      <script src="{{STATIC_URL}}js/bootstrap-dropdown.js"></script>
      <script src="{{STATIC_URL}}js/bootstrap-button.js"></script>
+     <script src="{{STATIC_URL}}js/bootstrap-collapse.js"></script>
  
   </body>
 </html>
