--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -109,9 +109,9 @@
     </div>
     <div class="container">
 		<div class="initial-message" style="display:none">
-			<h1>Hi, Potato!</h1>
-	        <p>This is my implementation using
-			Django, Backbone.js and Twitter Bootstrap.<br/>
+			<h1>Hi, there!</h1>
+	        <p>This is a simple example of how
+			Django, Backbone.js and Google App Engine can play together.<br/>
 			</p>
 	        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 		</div>
